@@ -5,3 +5,4 @@ digiRootWriterAlg.digiRootFile = "$digiChunkFile";
 ToolSvc.FSWAuxLibsTool.FileNamePeds="cal_db_pedestals";
 ToolSvc.FSWAuxLibsTool.FileNameGains="cal_db_gains";
 //MootSvc.ExitOnFatal = false;  // Allow MootSvc to continue if the MOOT key isn't found
+TriggerAlg.failOnFmxKeyMismatch = true;
